--- a/style.css
+++ b/style.css
@@ -168,3 +168,17 @@ footer {
   text-align: center;
   font-size: 14px;
 }
+
+/*media queries*/
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop-dark.jpg);
+    height: 100%;
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+    height: 100%;
+  }
+}
