--- a/style.css
+++ b/style.css
@@ -83,11 +83,19 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  /*right: 0;
+  left: initial;*/
+
+  animation: slide-in 0.4s forwards;
 }
 
 #switch span {
@@ -180,5 +188,24 @@ footer {
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
     height: 100%;
+  }
+}
+
+/*animation*/
+@keyframes slide-in{
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
